--- a/cookiexss.html
+++ b/cookiexss.html
@@ -1,3 +1,15 @@
-<script>
+<html>
+
+<head>
+    <meta charset="utf8" />
+    <title>Frame embeded with malware :P</title>
+</head>
+
+<body>
+    <p>iframe element with malicious code</p>
+    <script>
         alert('Uh oh, I am bad, bad malware!!!')
     </script>
+</body>
+
+</html>
